# RobotOperatingSystem

./: .gitignore  gulyaev_lab1_var2.docx  otchet1  otchet2  setup.py  teleop_node.py  trajectory_node.py
Otchets/: gulyaev_kursovaya.docx  gulyaev_lab1_var2.docx  gulyaev_lab2_var2.docx  gulyaev_lab2_var2_n.docx  gulyaev_lab2_var2_new.docx  gulyaev_lab3_var2.docx  скрипты запуска.txt
etc/: .updated  group  group-  hostname  hosts  ld.so.cache  machine-id  passwd  passwd-  subuid  timezone  wsl-distribution.conf  wsl.conf  wsl.conf.save
etc/apparmor.d/: nvidia_modprobe  ubuntu_pro_esm_cache  usr.lib.snapd.snap-confine.real
etc/apparmor.d/abstractions/: dri-enumerate  mesa  opencl-intel  opencl-nvidia  opencl-pocl  video  vulkan
etc/apt/sources.list.d/: ros2.list
etc/cloud/cloud.cfg.d/: 90_dpkg.cfg
etc/java-21-openjdk/security/: java.security
etc/openni/: GlobalDefaults.ini
etc/profile.d/: apps-bin-path.sh
etc/ssl/certs/java/: cacerts
etc/xml/: catalog  catalog.old  libdbus-1-dev.xml  libdbus-1-dev.xml.old
home/dima/: .bash_history  .bashrc
home/dima/.rviz2/: default.rviz  persistent_settings
home/dima/ros2_ws/install/lab3_ellipse/share/lab3_ellipse/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/my_lab2_nav/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_lab2_worlds/: CMakeLists.txt  package.xml
Лаб1 файлы/ros2_ws/install/: setup.sh
Лаб2 файлы/: go_to_points.py  lab2_world.launch.py
(+63 files in other folders)
